--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "cSpell.words": [
     "composables",
     "dayjs",
-    "suncalc"
+    "suncalc",
+    "transform"
   ],
   "deno.enable": false
 }
